--- a/contents/docs/functions/ease/index.mdx
+++ b/contents/docs/functions/ease/index.mdx
@@ -3,15 +3,19 @@ title: Ease
 description: Functions for easing animations and transitions.
 ---
 
-## Linear
 ---
+
+## Linear
+<div className="api-card">
 
 Linear easing.
 
 `linear(t: float) → float`
 
+</div>
+
 ## Quad
----
+<div className="api-card">
 
 Quadratic easing.
 
@@ -21,8 +25,10 @@ Quadratic easing.
 
 `in_out_quad(t: float) → float`
 
+</div>
+
 ## Cubic
----
+<div className="api-card">
 
 Cubic easing.
 
@@ -32,9 +38,10 @@ Cubic easing.
 
 `in_out_cubic(t: float) → float`
 
+</div>
 
 ## Quart
----
+<div className="api-card">
 
 Quartic easing.
 
@@ -44,8 +51,10 @@ Quartic easing.
 
 `in_out_quart(t: float) → float`
 
+</div>
+
 ## Quint
----
+<div className="api-card">
 
 Quintic easing.
 
@@ -55,8 +64,10 @@ Quintic easing.
 
 `in_out_quint(t: float) → float`
 
+</div>
+
 ## Sin
----
+<div className="api-card">
 
 Sinusoidal easing.
 
@@ -66,8 +77,10 @@ Sinusoidal easing.
 
 `in_out_sin(t: float) → float`
 
+</div>
+
 ## Circ
----
+<div className="api-card">
 
 Circular easing.
 
@@ -77,8 +90,10 @@ Circular easing.
 
 `in_out_circ(t: float) → float`
 
+</div>
+
 ## Expo
----
+<div className="api-card">
 
 Exponential easing.
 
@@ -88,8 +103,10 @@ Exponential easing.
 
 `in_out_expo(t: float) → float`
 
+</div>
+
 ## Elastic
----
+<div className="api-card">
 
 Elastic easing.
 
@@ -99,8 +116,10 @@ Elastic easing.
 
 `in_out_elastic(t: float) → float`
 
+</div>
+
 ## Back
----
+<div className="api-card">
 
 Back easing.
 
@@ -110,8 +129,10 @@ Back easing.
 
 `in_out_back(t: float) → float`
 
+</div>
+
 ## Bounce
----
+<div className="api-card">
 
 Bounce easing.
 
@@ -120,3 +141,5 @@ Bounce easing.
 `out_bounce(t: float) → float`
 
 `in_out_bounce(t: float) → float`
+
+</div>
