--- a/contents/docs/functions/event/index.mdx
+++ b/contents/docs/functions/event/index.mdx
@@ -3,8 +3,10 @@ title: Event
 description: Functions for handling user input events.
 ---
 
-## Poll
 ---
+
+## Poll
+<div className="api-card">
 
 `poll() → list[Event]`
 
@@ -15,3 +17,5 @@ This clears input states and returns a list of events that occurred since the la
 _**Returns**_
 
 `list[Event]` : A list of events that have occurred since the last call to `poll()`.
+
+</div>
