--- a/contents/docs/functions/key/index.mdx
+++ b/contents/docs/functions/key/index.mdx
@@ -3,8 +3,10 @@ title: Key
 description: Functions for interacting with keyboard inputs.
 ---
 
-## Is Pressed
 ---
+
+## Is Pressed
+<div className="api-card">
 
 `is_pressed(scancode: Scancode) → bool`
 
@@ -32,8 +34,10 @@ _**Returns**_
 
 `bool` : True if the key is pressed, otherwise False.
 
+</div>
+
 ## Is Just Pressed
----
+<div className="api-card">
 
 `is_just_pressed(scancode: Scancode) → bool`
 
@@ -61,8 +65,10 @@ _**Returns**_
 
 `bool` : True if the key was just pressed, otherwise False.
 
+</div>
+
 ## Is Just Released
----
+<div className="api-card">
 
 `is_just_released(scancode: Scancode) → bool`
 
@@ -89,3 +95,5 @@ _**Parameters**_
 _**Returns**_
 
 `bool` : True if the key was just released, otherwise False.
+
+</div>
