--- a/contents/docs/functions/rect/index.mdx
+++ b/contents/docs/functions/rect/index.mdx
@@ -3,8 +3,10 @@ title: Rect
 description: Functions for rectangle operations.
 ---
 
-## Move
 ---
+
+## Move
+<div className="api-card">
 
 `move(rect: Rect, offset: Vec2) → Rect`
 
@@ -19,8 +21,10 @@ _**Returns**_
 
 `Rect` : The moved rectangle.
 
+</div>
+
 ## Clamp
----
+<div className="api-card">
 
 `clamp(rect: Rect, min: Vec2, max: Vec2) → Rect`
 
@@ -51,8 +55,10 @@ _**Returns**_
 
 `Rect` : The clamped rectangle.
 
+</div>
+
 ## Scale By
----
+<div className="api-card">
 
 `scale_by(rect: Rect, factor: float) → Rect`
 
@@ -82,8 +88,10 @@ _**Returns**_
 
 `Rect` : The scaled rectangle.
 
+</div>
+
 ## Scale To
----
+<div className="api-card">
 
 `scale_to(rect: Rect, size: Vec2) → Rect`
 
@@ -97,3 +105,5 @@ _**Parameters**_
 _**Returns**_
 
 `Rect` : The scaled rectangle.
+
+</div>
