--- a/contents/docs/functions/window/index.mdx
+++ b/contents/docs/functions/window/index.mdx
@@ -3,57 +3,119 @@ title: Window
 description: Functions for creating and managing an application window.
 ---
 
-## Create
 ---
 
-`create(title: str, size: Vec2, scaled: bool = False) → None`
+## Create
+<div className="api-card">
+
+`create(title: str, resolution: Vec2, scaled: bool = False) → None`
+
+Create a new application window.
+
+_**Parameters**_
+
+- `title` : The title of the window.
+- `resolution` : The initial resolution of the window.
+- `scaled` : Whether the window should be automatically scaled up to fit into the display.
+
+</div>
 
 ## Is Open
----
+<div className="api-card">
 
 `is_open() → bool`
 
+Check if the window is currently open.
+
+_**Returns**_
+
+- `bool` : True if the window is open, False otherwise.
+
+</div>
+
 ## Close
----
+<div className="api-card">
 
 `close() → None`
 
-## Get Size
----
+Close the application window.
 
-`get_size() → tuple[float, float]`
+</div>
+
+## Get Size
+<div className="api-card">
+
+`get_size() → Vec2`
+
+Get the current size of the window. If scaled, the size will be adjusted to fit the display.
+
+_**Returns**_
+
+- `Vec2` : The current size of the window.
+
+</div>
 
 ## Set Fullscreen
----
+<div className="api-card">
 
 `set_fullscreen(fullscreen: bool) → None`
 
+Set the window to a fullscreen mode.
+
+_**Parameters**_
+
+- `fullscreen` : Whether to enable or disable fullscreen mode.
+
+</div>
+
 ## Is Fullscreen
----
+<div className="api-card">
 
 `is_fullscreen() → bool`
 
+Check if the window is currently in fullscreen mode.
+
+_**Returns**_
+
+- `bool` : True if the window is in fullscreen mode, False otherwise.
+
+</div>
+
 ## Set Title
----
+<div className="api-card">
 
 `set_title(title: str) → None`
 
+Set the title of the window.
+
+_**Parameters**_
+
+- `title` : The new title of the window.
+
+</div>
+
 ## Get Title
----
+<div className="api-card">
 
 `get_title() → str`
 
-## Init
----
+Get the current title of the window.
 
-`init() → None`
+_**Returns**_
 
-## Quit
----
+- `str` : The current title of the window.
 
-`quit() → None`
+</div>
 
-## Get Window _(internal)_
----
+## Get Scale
+<div className="api-card">
 
-`get_window() → SDL_Window*`
+`get_scale() → int`
+
+Get the scale of the window relative to the renderer resolution.
+
+_**Returns**_
+
+- `int` : The current scale factor of the window.
+
+</div>
